# 2026-KT-SocialProject

./: .env.default  .gitattributes  .gitignore  01_generate_dataset.ipynb  LICENSE  PROJECT.md  PROPOSAL.html  README.md  build.gradle.kts  gradle.properties  pilot.ipynb  pmrisk.py  pyproject.toml  settings.gradle.kts
.claude/: settings.json
.omc/: project-memory.json
.omc/sessions/: 74b75312-0aa9-4aa5-93bd-b0b7ac32cd06.json
.omc/state/: last-tool-error.json
.omc/state/sessions/74b75312-0aa9-4aa5-93bd-b0b7ac32cd06/: session-started.json
.omc/state/sessions/d9abdd72-b6af-4651-8182-27ec923ee63a/: session-started.json
data/: accidents_synth.csv  risk_map.html
deploy/: README.md  bootstrap.sh  deploy.sh  run.sh  teardown.sh
deploy/systemd/: pm-safeline-deploy.service  pm-safeline-deploy.timer  pm-safeline.service
docs/: index.html  traffic_agent_propsal.html
docs/resources/data/: daejeon_weather_hourly.csv  data_request_spec.csv  grid_features.gpkg
docs/resources/data/asos/: SURFACE_ASOS_133_HR_2023_2023_2024.csv  SURFACE_ASOS_133_HR_2024_2024_2025.csv  SURFACE_ASOS_133_HR_2025_2025_2026.csv  daejeon_weather_hourly_2026.csv
docs/resources/pilot/: 01_generate_dataset.ipynb  Hierarchical_Bayes_for_Traffic.ipynb  PROJECT.html  XGBoost_for_Traffic.ipynb  build_generate.py  build_pilot.py  pilot.ipynb  pilot_augmented.ipynb
gradle/: libs.versions.toml
pmdata/: README.md  __init__.py  __main__.py  collect.py  dataset.py
src/main/kotlin/: Dotenv.kt  Http.kt  Routing.kt  main.kt
src/main/kotlin/api/: Dtos.kt
src/main/kotlin/plugins/: Serialization.kt  StatusPages.kt
src/main/kotlin/routing/: GraphHopperEngine.kt  OsmDownloader.kt  PmCostWeights.kt  PmRoadTypeTurnCost.kt  RouteService.kt  RoutingConfig.kt  RoutingModule.kt
src/main/python/: README.md
src/main/python/notebooks/: test_datasets.ipynb
src/main/python/pm_proj/: __init__.py  __main__.py
src/main/python/pm_proj/datasets/: collect.py
src/main/python/pm_proj/utils/: config.py  koroad.py  (+1 more)
src/main/python/pm_safeline/: __init__.py  __main__.py
src/main/resources/: application.yaml  documentation.yaml
src/main/resources/static/: index.html
src/test/ipython/: test_datasets.ipynb  train_irl.ipynb  train_teacher.ipynb
src/test/kotlin/: ServerTest.kt
src/test/notebooks/: test_datasets.ipynb  train_irl.ipynb  train_teacher.ipynb
(+25 files in other folders)
