[project]
name = "proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.1",
    "numpy>=2.4.6",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
    "pillow>=11.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
# 학습(teacher 모델)용. Py3.14 torch 휠 부재 시 별도 env 권장:
#   uv venv --python 3.12 .venv-train && .venv-train/bin/pip install -e ".[train]"
train = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]
