[project]
name = "pm_proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",

    "osmnx>=2.1.0",
    "xgboost>=3.2.0",
    "requests>=2.32.0",
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",

    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",

    "seaborn>=0.13.2",
    "pillow>=11.0.0",
    "matplotlib>=3.10.9",

    "jupyterlab>=4.5.7",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
